responsiveness is on the way

--- a/src/app/components/general/button/button.component.html
+++ b/src/app/components/general/button/button.component.html
@@ -2,6 +2,6 @@
 <img *ngIf="image" src="{{ image.path }}" alt="{{ image.alt }}" loading="lazy" (click)="onClick()" />
 <p *ngIf="showName">{{name}}</p>
 <app-tooltip *ngIf="type == lt.GITHUB" name="Please don't look at my code, it's horrible"
-  [direction]="d.RIGHT"></app-tooltip>
+  [direction]="d.LEFT"></app-tooltip>
 <!--p *ngIf="type === lt.OTHER || type === lt.PERSON" (click)="onClick()">{{name}}</p-->
 <ng-content></ng-content>
