--- a/src/app/components/general/contentbox/contentbox.component.html
+++ b/src/app/components/general/contentbox/contentbox.component.html
@@ -1,24 +1,13 @@
 <div #cbToggle>
   <div class="preview" (click)="cbToggle.classList.toggle('active')">
-    <img
-      *ngIf="preview"
-      class="previewImg"
-      src="{{ preview.path }}"
-      alt="{{ preview.alt }}"
-      loading="lazy"
-    />
+    <img *ngIf="preview" class="previewImg" src="{{ preview.path }}" alt="{{ preview.alt }}" loading="lazy" />
 
-    <h2 class="title" *ngIf="!link">{{ title }}</h2>
-    <h2 class="title" *ngIf="link">
+    <h3 class="title" *ngIf="!link">{{ title }}</h3>
+    <h3 class="title" *ngIf="link">
       <a href="{{ link }}" target="_blank">{{ title }}</a>
-    </h2>
+    </h3>
 
-    <img
-      class="arrowImg"
-      src="{{ arrowIcon.path }}"
-      alt="{{ arrowIcon.alt }}"
-      loading="lazy"
-    />
+    <img class="arrowImg" src="{{ arrowIcon.path }}" alt="{{ arrowIcon.alt }}" loading="lazy" />
   </div>
   <div *ngIf="hasImage" class="mainImg">
     <app-carousel *ngIf="isCarousel" [images]="images"></app-carousel>
