--- a/src/app/components/views/projects/projects.component.html
+++ b/src/app/components/views/projects/projects.component.html
@@ -12,14 +12,6 @@
       | projectsFilter : selectedSkillFilter : selectedProjectFilter
   " [image]="project.image" [title]="project.name" [subTitle]="project.date | pipeDate"
   [description]="project.description" [link]="project.url">
-  <div *ngIf="project.github || project.url" class="bot links">
-    <h4>Link{{ project.github && project.url ? "s" : "" }}</h4>
-    <div class="content">
-      <app-button *ngIf="project.github" [onClick]="ol(project.github)" [type]="lt.GITHUB"
-        [name]="lt.GITHUB.name"></app-button>
-      <app-button *ngIf="project.url" [onClick]="ol(project.url)" [type]="lt.URL" [name]="lt.URL.name"></app-button>
-    </div>
-  </div>
   <div *ngIf="project.authors" class="bot authors">
     <h4>Author{{ project.authors.length > 1 ? "en" : "" }}</h4>
     <div class="content">
@@ -35,12 +27,20 @@
         [showName]="true"></app-button>
     </div>
   </div>
+  <div *ngIf="project.github || project.url" class="bot links">
+    <h4>Link{{ project.github && project.url ? "s" : "" }}</h4>
+    <div class="content">
+      <app-button *ngIf="project.github" [onClick]="ol(project.github)" [type]="lt.GITHUB"
+        [name]="lt.GITHUB.name"></app-button>
+      <app-button *ngIf="project.url" [onClick]="ol(project.url)" [type]="lt.URL" [name]="lt.URL.name"></app-button>
+    </div>
+  </div>
   <!--div *ngIf="project.clients.length > 0" class="bot client">
         <h4>Entwickelt für</h4>
         <div class="content">
             <app-button *ngFor="let client of project.clients" [onClick]="ol(client.url)" [type]="lt.URL" [name]="client.name"><p>{{client.name}}</p></app-button>
         </div>
-    </div-->
+  </div-->
   <div *ngIf="project.career" class="bot career">
     <h4>Entwickelt bei</h4>
     <div class="content">
@@ -49,7 +49,7 @@
         [showName]="true"></app-button>
     </div>
   </div>
-  <div class="bot skills">
+  <div bottom class="bot skills">
     <h4>Skill{{ project.skills.length > 1 ? "s" : "" }}</h4>
     <div class="content">
       <app-skill-item *ngFor="let skill of project.skills" [showPercent]="false" [skill]="skill"></app-skill-item>
